--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,44 +1,1 @@
-body {
-  background: #333;
-  color: #fff; }
-
-.navbar {
-  border-bottom: #008ed6 2px solid; }
-
-.navbar-scrolling {
-  opacity: 0.8; }
-
-#home-section .fa {
-  color: #008ed6;
-  background: #fff;
-  padding: 4px;
-  border-radius: 5px;
-  font-size: 30px; }
-
-#accommodation-section .fa,
-#share-section .fa {
-  color: #fff;
-  background: #333;
-  padding: 4px;
-  border-radius: 5px;
-  font-size: 30px; }
-
-#activities-section .fa {
-  color: #008ed6;
-  background: #fff;
-  padding: 4px;
-  border-radius: 5px;
-  font-size: 30px; }
-
-#fillRequirementsModal {
-  color: black; }
-
-.home-section-padding {
-  padding-top: 100px; }
-
-.parallax-window {
-  min-height: 700px;
-  background: transparent; }
-
-.window-wrapper {
-  background: #ffffff; }
+body{background:#333;color:#fff}.navbar{border-bottom:#008ed6 2px solid}.navbar-scrolling{opacity:.8}#home-section .fa{color:#008ed6;background:#fff;padding:4px;border-radius:5px;font-size:30px}#accommodation-section .fa,#share-section .fa{color:#fff;background:#333;padding:4px;border-radius:5px;font-size:30px}#activities-section .fa{color:#008ed6;background:#fff;padding:4px;border-radius:5px;font-size:30px}#fillRequirementsModal{color:#000}.home-section-padding{padding-top:100px}.parallax-window{min-height:700px;background:0 0}.window-wrapper{background:#fff}
